Prevent filter options from wrapping when menu is made narrow.
git-svn-id: https://opensource.kantega.no/svn/openaksess/trunk@1294 fd808399-8219-4f14-9d4c-37719d9ec93d

--- a/modules/webapp/src/webapp/admin/css/navigate.css
+++ b/modules/webapp/src/webapp/admin/css/navigate.css
@@ -71,6 +71,8 @@
     border-bottom: 1px solid #cccccc;
     height: 2em;
     position: relative;
+    overflow: hidden;
+    white-space: nowrap;
 }
 #Filteroptions .hideexpired {
     display: inline;
